--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <article id="p4">
                     <h2>Seguro para rueda de repuesto inferior</h2>
                     <h3>Ubicada abajo del piso</h3>
-                <div class="row">
+                <div class="row w-100">
                     <div class="article col-md-7">
                         <div id="gal" class="col-md-9 ml-md-auto">
                             <div id="carousel-4" class="carousel slide" data-ride="carousel">
@@ -374,7 +374,7 @@
 
         <article id="p5">
                 <h2>Plumillas ECOFLAT delantera en Teflón</h2>
-        <div class="row">
+        <div class="row w-100">
             <div class="article col-md-7">
                 <div id="gal" class="col-md-9 ml-md-auto">
                     <div id="carousel-5" class="carousel slide" data-ride="carousel">
@@ -433,7 +433,7 @@
 
             <h2>Plumillas ECOFLAT trasera en Teflón</h2>
     <article id="p6">
-        <div class="row">
+        <div class="row w-100">
             <div class="article col-md-7">
                 <div id="gal" class="col-md-9 ml-md-auto">
                     <div id="carousel-6" class="carousel slide" data-ride="carousel">
