--- a/index.html
+++ b/index.html
@@ -534,5 +534,5 @@
                 <script src="js/popper.min.js"></script>
                 <script src="js/bootstrap.min.js"></script>
 </body>
-
+<!-- Esto sirve -->
 </html>
