--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Dunovo</title>
     <link rel="stylesheet" media="all" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" media="all" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" media="all" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Andada|Roboto" rel="stylesheet">
     <link rel="icon" type="img/png" href="images/icon.jpg">
+    <link rel="stylesheet" media="all" type="text/css" href="css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js" integrity="sha384-kW+oWsYx3YpxvjtZjFXqazFpA7UP/MbiY4jvs+RWZo2+N94PFZ36T6TFkc9O3qoB" crossorigin="anonymous"></script>
 </head>
 
@@ -24,22 +24,30 @@
 
         <div id="intro" class="container-fluid d-flex align-items-center justify-content-center">
      
-            <div class="row">
-            <article class="col-md-3 animated slideInDown">
-                <a href="#pernos"><h2>Tuercas y Pernos de Seguridad</h2>
-                <img src="images/img1.png" class="img-fluid">
-            </article></a>
-            <article class="col-md-3 animated slideInUp">
+            <div class="row my-5 my-md-0">
+            <article class="col-6 col-md-3 d-flex align-items-end animated slideInDown">
+                <div>
+                    <a href="#pernos"><h2>Tuercas y Pernos de Seguridad</h2>
+                    <img src="images/img1.png" class="img-fluid"></a>
+                </div>
+            </article>
+            <article class="col-6 col-md-3 d-flex align-items-end animated slideInUp">
+                <div>
                     <a href="#seguros"><h2>Seguros para llantas de vehículos</h2>
-                <img src="images/img2.png" class="img-fluid"></a>
+                    <img src="images/img2.png" class="img-fluid"></a>
+                </div>
             </article>
-            <article class="col-md-3 animated slideInDown">
+            <article class="col-6 col-md-3 d-flex align-items-end animated slideInDown">
+                <div>
                     <a href="#plumillas"><h2>Plumillas para Limpiabrisas</h2>
-                <img src="images/img3.png" class="img-fluid"></a>
+                    <img src="images/img3.png" class="img-fluid"></a>
+                </div>
             </article>
-            <article class="col-md-3 animated slideInUp">
+            <article class="col-6 col-md-3 d-flex align-items-end animated slideInUp">
+                <div>
                     <a href="#contacto"><h2>Contáctenos</h2>
-                <img src="images/img4.png" class="img-fluid"></a>
+                    <img src="images/img4.png" class="img-fluid"></a>
+                </div>
             </article>        
             </div>
 
