--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Jenny Rodríguez">
+    <meta name="description" content="Dunovo ltda. Comercializadora de productos de alta calidad para vehículos como: Tuercas y Pernos de Seguridad, Seguros para las llantas de repuesto y Plumillas para limpiabrisas. ">
     <title>Dunovo</title>
     <link rel="stylesheet" media="all" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" media="all" type="text/css" href="css/animate.css">
@@ -50,10 +52,6 @@
                 </div>
             </article>        
             </div>
-
-            
-
-
         </div>
 
 
