--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="row my-5 my-md-0">
             <article class="col-6 col-md-3 d-flex align-items-end animated slideInDown">
                 <div>
-                    <a href="#pernos"><h2>Tuercas y Pernos de Seguridad</h2>
+                    <a href="#pernos"><h2>Tuercas y pernos de Seguridad</h2>
                     <img src="images/img1.png" class="img-fluid"></a>
                 </div>
             </article>
@@ -60,9 +60,9 @@
         <div id="pernos" class="titulo">
             <div id="art" class="titulo">
 
-                <h1>Pernos y Tuercas de Seguridad para llantas de vehículos</h1>
-                <p class="mb-4">Pernos y Tuercas fabricados en acero templado de alta calidad, asiento cónico, esférico y
-                    plano para ofrecer dureza, consistencia, durabilidad y resistencia en a instalación de las
+                <h1>Tuercas y pernos de Seguridad para llantas de vehículos</h1>
+                <p class="mb-4">Tuercas y pernos fabricados en acero templado de alta calidad, asiento cónico, esférico o
+                    plano para ofrecer dureza, consistencia, durabilidad y resistencia en la instalación de las
                     ruedas del automóvil. Cada juego de pernos cuenta con un código de seguridad que permite
                     recuperar la llave de apertura en caso de pérdida e igualmente garantiza la originalidad y
                     exclusividad de cada uno de ellos.</p>
@@ -237,15 +237,15 @@
                 <div id ="art3" class="titulo">
     
                     <h1>Seguros para llantas de vehículos</h1>
-                    <p class="mb-4">Fabricados en acero de alto calibre, diseñado para vehículos utilitarios de platón, o en su defecto,
-                    aquellos que tengan de repuesto debajo del chasis.</p>
+                    <p class="mb-4">Fabricados en acero de alto calibre, diseñados para vehículos utilitarios de platón, o en su defecto,
+                    aquellos que tengan llanta de repuesto debajo del chasis.</p>
                 </div>
 
                 </div>
     
                 <article id="p3">
-                        <h2>Seguro para rueda de repuesto superior</h2>
-                        <h3>Ubicada en la quinta rueda</h3>
+                        <h2>Seguro para rueda de repuesto posterior</h2>
+                        <h3>Ubicada en la quinta puerta</h3> 
 
                 <div class="container-fluid">
                     <div class="row">
@@ -305,7 +305,7 @@
                                         <th>2 x 1,50 milímetros</th>
                                     </tr>
                                     <tr>
-                                        <th><b>* Cuenta con una segunda llave de repuesto en caso de pérdida.</b></th>
+                                        <th><b>* Suministrado con dos llaves.</b></th>
                                     </tr>
                                 </tbody>
                             </table>
@@ -359,7 +359,7 @@
                         <table class="table mx-4 mx-md-0">
                             <tbody>
                                 <tr>
-                                    <th><b>*Cuenta con llaves de repuesto en caso de pérdida</b></th>
+                                    <th><b>* Suministrado con tres llaves</b></th>
                                 </tr>
                             </tbody>
                         </table>
@@ -379,8 +379,8 @@
         <div id="art4" class="titulo">
 
             <h1>Plumillas para limpiabrisas</h1>
-            <p>Gracias a su diseño liviano y aerodinámico las plumillas ECOFLAT permiten un barrido
-                óptimo de 45 grados, operan con menor esfuerzo disminuyendo sensiblemente el ruido
+            <p>Gracias a su diseño liviano y aerodinámico, las plumillas ECOFLAT permiten un barrido
+                óptimo, operan con menor esfuerzo disminuyendo sensiblemente el ruido
                 y no se deteriora por corrosión u oxidación </p>
         </div>
             </div>
@@ -444,7 +444,7 @@
         </div>
     </article>
 
-            <h2>Plumillas ECOFLAT trasera en Teflón</h2>
+            <h2>Plumillas ECOFLAT traseras en Teflón</h2>
     <article id="p6">
         <div class="row w-100">
             <div class="article col-md-7">
@@ -485,7 +485,7 @@
                     <tbody>
                         <tr>
                             <th>
-                                <b>Cuenta con 10 adaptadores</b> diferentes que
+                                <b>Cuentan con 10 adaptadores</b> diferentes que
                                 brindan la posibilidad de instalación en los diferentes
                                 tipos de brazos de todo tipo de vehículos
                             </th>
@@ -498,7 +498,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th> 12", 14" y 16" (pulgadas)</th>
+                            <th> 11", 12", 13", 14", 15" y 16" (pulgadas)</th>
                         </tr>
                     </tbody>
                 </table>
